Location in references (ResourceProxy in implementation) now stored and accessed as URI. No automatic resolution against the document location takes places anymore.